--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "electron-react-typescript-boilerplate",
-  "productName": "ElectronReactTypescript",
-  "version": "0.10.0",
-  "description": "Electron application boilerplate based on TypeScript, React, React Router, Webpack, React Hot Loader for rapid application development",
+  "name": "electron-stream-monitor",
+  "productName": "StreamMonitor",
+  "version": "0.0.1",
+  "license": "UNLICENSED",
   "main": "main.js",
   "scripts": {
     "test": "cross-env NODE_ENV=test node --trace-warnings ./test/runTests.js",
@@ -87,29 +87,6 @@
   "bin": {
     "electron": "./node_modules/.bin/electron"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/irath96/electron-react-typescript-boilerplate.git"
-  },
-  "author": {
-    "name": "Alexander Rath",
-    "email": "irath96@gmail.com",
-    "url": "https://github.com/irath96"
-  },
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/irath96/electron-react-typescript-boilerplate/issues"
-  },
-  "keywords": [
-    "electron",
-    "boilerplate",
-    "react",
-    "react-router",
-    "flux",
-    "webpack",
-    "react-hot"
-  ],
-  "homepage": "https://github.com/irath96/electron-react-typescript-boilerplate#readme",
   "devDependencies": {
     "@types/enzyme": "^3.1.1",
     "@types/history": "^4.5.2",
@@ -122,6 +99,7 @@
     "@types/react-router": "^4.0.11",
     "@types/react-router-dom": "^4.0.7",
     "@types/react-router-redux": "^5.0.2",
+    "@types/reactstrap": "^6.4.2",
     "@types/redux-logger": "^3.0.0",
     "@types/sinon": "^4.0.0",
     "asar": "^0.14.0",
@@ -136,6 +114,7 @@
     "electron-builder-http": "^19.15.0",
     "electron-devtools-installer": "^2.0.1",
     "enzyme": "^3.0.0",
+    "enzyme-adapter-react-16": "^1.0.0",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.5",
@@ -146,7 +125,6 @@
     "node-sass": "^4.1.1",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-test-renderer": "^16.0.0",
-    "enzyme-adapter-react-16": "^1.0.0",
     "redux-logger": "^3.0.6",
     "sass-loader": "^6.0.6",
     "sinon": "^4.0.0",
@@ -155,7 +133,9 @@
     "ts-loader": "^3.1.0",
     "ts-node": "^4.1.0",
     "tslint": "^5.4.3",
-    "typescript": "^2.4.1",
+    "tslint-config-prettier": "^1.15.0",
+    "tslint-react": "^3.6.0",
+    "typescript": "^3.1.6",
     "url-loader": "^0.6.1",
     "webpack": "^3.3.0",
     "webpack-dev-middleware": "^2.0.3",
@@ -163,18 +143,32 @@
     "webpack-merge": "^4.1.1"
   },
   "dependencies": {
+    "@rematch/core": "^1.0.6",
+    "bootstrap": "^4.1.3",
+    "create-if-not-exist": "0.0.2",
+    "date-fns": "^1.29.0",
+    "dotenv": "^6.1.0",
     "electron-debug": "^1.1.0",
+    "electron-google-oauth": "^2.0.0",
+    "electron-vk-oauth2": "^1.0.2",
     "font-awesome": "^4.7.0",
+    "google-auth-library": "^2.0.1",
+    "googleapis": "^34.0.0",
     "history": "^4.6.1",
+    "opn": "^5.4.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.1",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^5.0.0-alpha.6",
+    "reactstrap": "^6.5.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
-    "source-map-support": "^0.5.0"
+    "rxjs": "^6.3.3",
+    "shelljs": "^0.8.3",
+    "source-map-support": "^0.5.0",
+    "vk-io": "^4.0.0-rc.8"
   },
   "devEngines": {
     "node": ">=6.x",
