--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     ]
   },
   "build": {
-    "productName": "ElectronReactTypescript",
-    "appId": "io.github.irath96.ElectronReactTypescript",
+    "productName": "StreamMonitor",
+    "appId": "io.github.corsairdnb.StreamMonitor",
     "dmg": {
       "contents": [
         {
